--- a/views/home.pug
+++ b/views/home.pug
@@ -1,11 +1,3 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title 卫慧杰
-  body 
-    h1 hello world
-    div 卫慧杰
-    div hello
+extends layouts/main-layout.pug
+block content
+  h1 Hello world
