--- a/views/register.pug
+++ b/views/register.pug
@@ -2,11 +2,24 @@ extends layouts/login-layout.pug
 block content 
   .loginContainer 
     h1 注册
-    form(method="post") 
-      input(type="text", name="name", placeholder="name", required="")
-      input(type="text", name="username", placeholder="username", required="")
-      input(type="email", name="email", placeholder="email", required="")
-      input(type="password", name="password", placeholder="Password", required="")
-      input(type="password", name="passwordConf", placeholder="Confirm password", required="")
+    form#registerForm(method="post", onsubmit="event.preventDefault(); validateForm()") 
+      p.errorMessage #{errorMessage}
+      
+      input(type="text", name="name", value=name, placeholder="name", required="")
+      input(type="text", name="username", value=username, placeholder="username", required="")
+      input(type="email", name="email", value=email, placeholder="email", required="")
+      input#password(type="password",  name="password", placeholder="Password", required="")
+      input#passwordConf(type="password", name="passwordConf", placeholder="Confirm password", required="")
       input(type="submit", value="注册")
     a(href="/login") 已有账号？立即注册 
+  script.
+    var passwordField = document.getElementById('password');
+    var passwordConfirmField = document.getElementById('passwordConf');
+    var form = document.getElementById('registerForm');
+    function validateForm() {
+      if (passwordField.value !== passwordConfirmField.value) {
+        alert('Passwords do not match, Please try again.')
+      } else {
+        form.submit()
+      }
+    }
