--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,7 @@ block content
   .loginContainer 
     h1 登录
     form(method="post") 
+      p.errorMessage #{errorMessage}
       input(type="text", name="loginUsername", placeholder="Username or email", required="")
       input(type="password", name="loginPassword", placeholder="Password", required="")
       input(type="submit", value="登录")
