--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -5,8 +5,30 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title #{pageTitle}
+    link(rel="stylesheet", href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
+    link(rel="stylesheet", href="/css/main.css")
   body 
-    block content
+    .wrapper
+      .row 
+        nav.col-2
+          a.blue(href="/")
+            i.fa.fa-weibo
+          a(href="/")
+            i.fa.fa-home
+          a(href="/search")
+            i.fa.fa-search
+          a(href="/notifacations")
+            i.fa.fa-bell
+          a(href="/message")
+            i.fa.fa-envelope
+          a(href="/profile")
+            i.fa.fa-user
+          a(href="/logout")
+            i.fa.fa-sign-out
+        .mainSectionContainer.col-10.col-md-8.col-lg-6
+          block content
+        .d-none.d-md-block.col-md-2.col-lg-4
+          span 右侧内容
     script (src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script (src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
