使用mixin封装发布动态

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,3 +1,4 @@
+include ../mixins/mixins
 doctype html
 html(lang="en")
   head
@@ -27,6 +28,8 @@ html(lang="en")
           a(href="/logout")
             i.fa.fa-sign-out
         .mainSectionContainer.col-10.col-md-8.col-lg-6
+          .titleContainer 
+            h1 #{pageTitle}
           block content
         .d-none.d-md-block.col-md-2.col-lg-4
           span 右侧内容
