--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,15 +4,27 @@
   --buttonHoverBg: #d4edff;
   --lightGrey: rgb(230, 236, 240);
   --spacing: 15px;
+  --greyText: rgb(101, 119, 134);
+  --greyButtonText: rgba(0, 0, 0, 0.34);
+}
+
+* {
+  outline: none !important;
 }
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 a:hover {
   color: inherit;
-  text-decoration: none;
+}
+
+h1 {
+  font-size: 19px;
+  font-weight: 800;
+  margin: 0;
 }
 
 nav {
@@ -30,6 +42,7 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #212529;
 }
 
 nav a.blue {
@@ -40,6 +53,12 @@ nav a:hover {
   background-color: var(--buttonHoverBg);
   color: var(--blue);
   border-radius: 50%;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  color: var(--greyButtonText);
 }
 
 .mainSectionContainer {
@@ -55,7 +74,7 @@ nav a:hover {
   padding: 0 var(--spacing);
   display: flex;
   align-items: center;
-  border: 1px solid var(--lightGrey);
+  border-bottom: 1px solid var(--lightGrey);
   flex-shrink: 0;
 }
 
@@ -63,16 +82,10 @@ nav a:hover {
   flex: 1;
 }
 
-h1 {
-  font-size: 19px;
-  font-weight: 800;
-  margin: 0;
-}
-
 .postFormContainer {
   display: flex;
   padding: var(--spacing);
-  border-bottom: 10px solid var(--lightGrey);
+  border-bottom: 10px solid rgb(230, 236, 240);
   flex-shrink: 0;
 }
 
@@ -110,4 +123,63 @@ h1 {
 
 #submitPostButton:disabled {
   background-color: var(--blueLight);
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  padding: var(--spacing);
+  cursor: pointer;
+  border-bottom: 1px solid var(--lightGrey);
+  flex-shrink: 0;
+}
+
+.mainContentContainer {
+  flex: 1;
+  display: flex;
+}
+
+.postContentContainer {
+  padding-left: var(--spacing);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.username,
+.date {
+  color: var(--greyText);
+}
+
+.displayName {
+  font-weight: bold;
+}
+
+.postFooter {
+  display: flex;
+  align-items: center;
+}
+
+.postFooter .postButtonContainer {
+  flex: 1;
+  display: flex;
+}
+
+.postFooter .postButtonContainer button {
+  padding: 2px 5px;
+}
+
+.header a:hover {
+  text-decoration: underline;
+}
+
+.header a,
+.header span {
+  padding-right: 5px;
+}
+
+.postButtonContainer button:hover {
+  background-color: #d4edff;
+  color: var(--blue);
+  border-radius: 50%;
 }
