--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -32,9 +32,9 @@ html(lang="en")
             h1 #{pageTitle}
           block content
         .d-none.d-md-block.col-md-2.col-lg-4
-          span 右侧内容
     
     script(src='https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js')
     script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js' integrity='sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js' integrity='sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT' crossorigin='anonymous')
+    block scripts
     script(src="/js/common.js")
