--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@
   --spacing: 15px;
   --greyText: rgb(101, 119, 134);
   --greyButtonText: rgba(0, 0, 0, 0.34);
+  --redButton: rgb(226, 34, 94);
 }
 
 * {
@@ -59,6 +60,11 @@ button {
   background-color: transparent;
   border: none;
   color: var(--greyButtonText);
+}
+
+button i,
+button span {
+  pointer-events: none;
 }
 
 .mainSectionContainer {
@@ -182,4 +188,8 @@ button {
   background-color: #d4edff;
   color: var(--blue);
   border-radius: 50%;
+}
+
+.postButtonContainer.red button.active {
+  color: var(--redButton);
 }
