--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -10,6 +10,9 @@ html(lang="en")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous")
     link(rel="stylesheet", href="/css/main.css")
   body 
+    script.
+      const userLoggedIn = !{userLoggedInJs};
+
     .wrapper
       .row 
         nav.col-2
