客户端转发功能

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,9 @@
   --greyText: rgb(101, 119, 134);
   --greyButtonText: rgba(0, 0, 0, 0.34);
   --redButton: rgb(226, 34, 94);
+  --redBackground: rgba(226, 34, 94, 0.1);
+  --greenButton: rgb(23, 191, 99);
+  --greenBackground: rgba(23, 191, 99, 0.1);
 }
 
 * {
@@ -192,4 +195,24 @@ button span {
 
 .postButtonContainer.red button.active {
   color: var(--redButton);
+}
+
+.postButtonContainer.green button.active {
+  color: var(--greenButton);
+}
+
+.postButtonContainer.red button:hover {
+  color: var(--redButton);
+  background-color: var(--redBackground);
+}
+
+.postButtonContainer.green button:hover {
+  color: var(--greenButton);
+}
+
+.postActionContainer {
+  padding-left: 35px;
+  font-size: 13px;
+  color: var(--greyText);
+  margin-bottom: 5px;
 }
