--- a/public/css/main.css
+++ b/public/css/main.css
@@ -98,6 +98,16 @@ button span {
   flex-shrink: 0;
 }
 
+.modal .postFormContainer {
+  border: none;
+  padding: 0;
+  padding-top: var(--spacing);
+}
+
+.modal .post {
+  padding: 0 0 var(--spacing) 0;
+}
+
 .userImageContainer {
   width: 50px;
   height: 50px;
@@ -215,4 +225,13 @@ button span {
   font-size: 13px;
   color: var(--greyText);
   margin-bottom: 5px;
+}
+
+.reply {
+  margin-bottom: 5px;
+}
+
+.reply a {
+  color: var(--blue);
+  text-decoration: underline;
 }
