--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,3 +235,8 @@ button span {
   color: var(--blue);
   text-decoration: underline;
 }
+
+.post.largeFont .postBody,
+.post.largeFont .postFooter {
+  font-size: 23px;
+}
