--- a/views/postPage.pug
+++ b/views/postPage.pug
@@ -3,6 +3,6 @@ block content
   script. 
     var postId = '!{postId}'
   .postsContainer
-  +createReplyModel(userLoggedIn)
+  +createPostModals(userLoggedIn)
 block scripts
   script(src="/js/postPage.js")
